[add] refactor Autowired TpeController